[gd_scene load_steps=13 format=3 uid="uid://doayvc0xisily"]

[ext_resource type="Script" path="res://controllers/scripts/fps_controller.gd" id="1_g3qal"]
[ext_resource type="Material" uid="uid://c7w5nhqc43peh" path="res://materials/fps_controller.tres" id="2_ds2y7"]
[ext_resource type="Script" path="res://controllers/scripts/crosshair.gd" id="3_65rq4"]
[ext_resource type="Theme" uid="uid://dm8mdrmxeor0w" path="res://user_interface/theme/debug_ui_theme.tres" id="4_36crs"]
[ext_resource type="StyleBox" uid="uid://b0cvpuvm050vs" path="res://user_interface/theme/debug_ui_style_box.tres" id="5_ju3dp"]
[ext_resource type="Script" path="res://controllers/scripts/debug.gd" id="6_8akev"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8fcdc"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gpb5n"]
material = ExtResource("2_ds2y7")

[sub_resource type="Animation" id="Animation_og7v5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape/PlaceholderMesh:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_frpet"]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape/PlaceholderMesh:mesh:height")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lv85c"]
_data = {
"RESET": SubResource("Animation_og7v5"),
"crouch": SubResource("Animation_frpet")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_rk3ce"]

[node name="FpsController" type="CharacterBody3D"]
script = ExtResource("1_g3qal")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8fcdc")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="CollisionShape"]
mesh = SubResource("CapsuleMesh_gpb5n")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera" type="Camera3D" parent="CameraController"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lv85c")
}

[node name="CrouchShapeCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_rk3ce")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(1, 1, 0, 1)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Crosshair" type="CenterContainer" parent="UserInterface" node_paths=PackedStringArray("fps_controller")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_65rq4")
fps_controller = NodePath("../..")

[node name="TopLine" type="Line2D" parent="UserInterface/Crosshair"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="RightLine" type="Line2D" parent="UserInterface/Crosshair"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="LeftLine" type="Line2D" parent="UserInterface/Crosshair"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="BottomLine" type="Line2D" parent="UserInterface/Crosshair"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="DebugPanel" type="PanelContainer" parent="UserInterface"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("4_36crs")
theme_override_styles/panel = ExtResource("5_ju3dp")
script = ExtResource("6_8akev")

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DebugPanel/MarginContainer"]
layout_mode = 2
